src/components/cover.module.css
.cover_container {
  width: 100%;
  height: 40rem;
  background-size: cover;
  background-position-y: -5rem;
  background-repeat: no-repeat;
  transition: all 0.3s ease-in-out;
}

.cover_info {
  align-self: flex-start;
  margin-top: 7.5rem;
}

.cover_items {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: start;
  gap: 2rem;
}

.cover_photo {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 20rem;
  height: 30rem;
  border-radius: 0.6rem;
  background: #94a3b8;
}

.cover_title {
  font-size: 3.2rem;
  font-weight: 700;
  line-height: 4.8rem;
}

.cover_title__date {
  display: inline;
  margin-left: 0.75rem;
  font-size: 3.2rem;
  line-height: 4.8rem;
  font-weight: 400;
}

.cover_movie__info {
  display: flex;
  gap: 1.2rem;
}

.cover_movie__info {
  margin-top: 0.8rem;
  padding-left: 0;
}

.cover_movie__info li {
  list-style-type: none;
  font-weight: 400;
  font-size: 1.4rem;
  line-height: 1.6rem;
}

.cover_movie__info li:nth-child(2)::before,
.cover_movie__info li:nth-child(3)::before {
  content: "\00B7";
  padding-right: 1.2rem;
}

.circular_container {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

.circular_info {
  width: 3rem;
  height: 3rem;
}

.circular_text {
  width: 2.1rem;
  font-size: 0.8rem;
  font-weight: 400;
  line-height: 0.94rem;
}

.cover_user__info {
  display: flex;
  align-items: center;
  gap: 1.6rem;
  margin-top: 2.2rem;
  margin-bottom: 2rem;
}

.cover_description {
  font-size: 1.4rem;
  font-style: italic;
  font-weight: 400;
  line-height: 1.64rem;
}

.cover_overview {
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.cover_overview h4 {
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.64rem;
}

.cover_overview p {
  font-size: 1.4rem;
  font-weight: 400;
  line-height: 1.64rem;
}

@media screen and (max-width: 425px) {
  .cover_container {
    height: auto;
    padding-top: 5rem;
  }

  .cover_photo {
    height: 25rem;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
  }

  .cover_info {
    align-self: auto;
    margin-top: 0;
    padding: 2rem;
    background: #e11d48;
    border-radius: 1rem;
    opacity: 0.9;
  }

  .cover_items {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .cover_title {
    font-size: 2.2rem;
    line-height: 2.8rem;
    text-align: center;
  }

  .cover_title__date {
    display: inline;
    font-size: 2.2rem;
    line-height: 2.8rem;
  }

  .cover_movie__info {
    display: flex;
    gap: 0.5rem;
  }

  .cover_movie__info {
    margin-top: 0.8rem;
    display: flex;
    justify-content: center;
  }

  .cover_movie__info li {
    font-weight: 400;
    font-size: 1.1rem;
    line-height: 1.4rem;
  }

  .cover_movie__info li:nth-child(2)::before,
  .cover_movie__info li:nth-child(3)::before {
    padding-right: 0.5rem;
  }

  .cover_user__info {
    justify-content: center;
    gap: 2rem;
  }

  .cover_description {
    font-size: 1.2rem;
    font-style: italic;
    font-weight: 400;
    line-height: 1.4rem;
    text-align: center;
  }

  .cover_overview {
    margin-top: 1.5rem;
    text-align: center;
  }

  .cover_overview h4 {
    font-size: 1.2rem;
    line-height: 1.4rem;
  }

  .cover_overview p {
    font-size: 1.1rem;
    line-height: 1.4rem;
  }
}

